# triage-bot

./: .dockerignore  AGENTS.md  COPILOT.md  Cargo.toml  DEVELOPMENT.md  README.md  rust-toolchain.toml  rustfmt.toml  web_search_agent.prompt.yml
.config/: nextest.toml
.github/: copilot-instructions.md  firewall-allowlist.json
.github/copilot/: config.yml
.github/workflows/: build.yml  copilot-setup-steps.yml  copilot.yml
docker/: Dockerfile  Dockerfile.app  Dockerfile.db  mcp.json
scripts/: setup_copilot_env.sh
src/: base.rs  bin.rs  config.rs  lib.rs  llm.rs  prelude.rs  runtime.rs  slack.rs
src/base/: config.rs  mod.rs  prompts.rs  types.rs
src/interaction/: app_mention.rs  chat_event.rs  message.rs  message_storage.rs  mod.rs
src/service/: chat.rs  db.rs  llm.rs  mod.rs  slack.rs
src/service/chat/: mod.rs  slack.rs
src/service/db/: mod.rs  surreal.rs
src/service/llm/: mod.rs  openai.rs
src/service/mcp/: mod.rs
tests/: integration.rs  mcp.json
utilities/: run-coverage.sh  run-tests.sh  setup_copilot_env.sh
