[package]
name = "triage-bot"
version = "0.1.0"
edition = "2024"
authors = ["Aaron Roney <twitchax@gmail.com>"]
description = "A Slack triage bot using LLMs."
license = "MIT"
repository = "https://github.com/twitchax/triage-bot"

[profile.release]
incremental = true

[lib]
name = "triage_bot"
path = "src/lib.rs"

[[bin]]
name = "triage-bot"
path = "src/bin.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
tracing-opentelemetry = { version = "0.31" }
opentelemetry-otlp = { version = "0.30" }
opentelemetry_sdk = { version = "0.30" }
opentelemetry = { version = "0.30" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
slack-morphism = { version = "2", features = ["hyper", "axum"] }
hyper = { version = "1", features = ["client"] }
hyper-util = { version = "0.1" }
hyper-rustls = { version = "0.27" }
rustls = { version = "0.23" }
async-openai = { version = "0.28" }
config = { version = "0.15", features = ["toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
anyhow = "1"
surrealdb = { version = "2", features = ["allocator", "kv-mem"] }
futures = "0.3"
chrono = { version = "0.4" }
async-trait = "0.1"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "tower",
    "auth",
] }
reqwest = { version = "0.12" }

[dev-dependencies]
mockall = "0.13"

# For future extensions (kept but unused for now)
# bincode = { version = "1", optional = true }
# ouroboros = { version = "0.17", optional = true }
# quinn = { version = "0.11", optional = true }
